<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/title_report" />
    <item
        android:id="@+id/navigation_transaction_list"
        android:icon="@drawable/ic_list"
        android:title="@string/title_activity_transaction_list" />
    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/ic_expense"
        android:title="@string/title_flow" />
    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person"
        android:title="@string/title_person" />
</menu>