<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.TransactionFragment">
    <!-- Type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_background"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operate_transaction_type"
            android:layout_marginStart="16dp"
            android:background="@null"
            />
        <Spinner
            android:id="@+id/spinner_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>
    <!-- Sub account -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background">
        <!-- Sub Account -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/hint_sub_account"
            android:background="@null"
            />
        <Spinner
            android:id="@+id/spinner_sub_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:id="@+id/button_manage_sub_account"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/subaccount_manage"
            android:src="@drawable/ic_fluent_card_ui_24_regular"
            android:background="@drawable/rounded_background"
            android:layout_marginEnd="8dp"
            />
    </LinearLayout>
    <!-- deal type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background">
        <!-- Type -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/hint_transaction_type"
            android:background="@null"
            />
        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:id="@+id/button_manage_type"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/hint_transaction_type"
            android:src="@drawable/ic_fluent_collections_add_24_regular"
            android:background="@drawable/rounded_background"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>
    <!-- Amount -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_background"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_amount"
            android:layout_marginStart="16dp"
            android:background="@null"
            />
        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="numberDecimal"
            android:background="@null"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>
    <!-- Borrower -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_borrower"
            android:layout_marginStart="16dp"
            android:background="@null"
            />
        <EditText
            android:id="@+id/edit_borrower"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:layout_marginStart="16dp"
            android:inputType="" />
    </LinearLayout>
    <!-- Note -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_description"
            android:layout_marginStart="16dp"
            android:background="@null"
            />
        <EditText
            android:id="@+id/edit_description"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:layout_marginStart="16dp"
            android:inputType="" />
    </LinearLayout>
    <!-- Time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_time"
            android:layout_marginStart="16dp"
            android:background="@null"
            />
        <EditText
            android:id="@+id/text_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:autofillHints=""
            android:focusable="true"
            android:clickable="true"
            android:background="@null"
            android:layout_marginStart="16dp"
            android:inputType="" />
    </LinearLayout>
    <!-- Add buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/button_add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/button_add"
            android:textColor="@color/white"
            android:backgroundTint="@color/black" />
    </LinearLayout>
</LinearLayout>